# eio

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  eio.pc.in  eio.spec  eio_1.7.7.orig.tar.gz.delta  eio_1.7.7.orig.tar.gz.id
debian/: changelog  control  copyright  libeio-dev.install  libeio-doc.doc-base  libeio-doc.install  libeio1.symbols  rules  watch
doc/: Doxyfile  Doxyfile.in  Makefile.am  Makefile.in  eio.dox.in
src/: Makefile.in
src/examples/: Makefile.am  Makefile.in
src/lib/: Eio.h  Makefile.in  eio_eet.c  eio_file.c  eio_main.c  eio_map.c  eio_monitor.c  eio_monitor_inotify.c  eio_single.c  eio_xattr.c
